# punkos

./: .gitignore  AGENTS.md  CLAUDE.md  CONTEXT.md  Cargo.toml  rust-toolchain.toml  shot.ppm
.cargo/: config.toml
docs/adr/: 0001-bare-metal-rust-kernel.md  0002-x86_64-limine-qemu.md  0003-ps2-input-before-usb.md  0004-uniform-fragment-graph.md  0005-rdf-quad-native-core.md  0006-webid-profile-standard-vocabularies.md  0007-did-key-self-sovereign-identity.md  0008-hardware-devices-as-fragments.md
docs/agents/: domain.md  issue-tracker.md
kernel/: Cargo.toml
kernel/src/: allocator.rs  framebuffer.rs  gdt.rs  interrupts.rs  keyboard.rs  main.rs  memory.rs  pci.rs  render.rs  serial.rs  xhci.rs
os/: Cargo.toml  build.rs
os/src/: main.rs
